[[Wear]] moved to [[wear]]: Converting page titles to lowercase <Wear#168922>

--- a/wiki/wear.wikitext
+++ b/wiki/wear.wikitext
@@ -1,33 +1,1 @@
-==English==
-=== Pronunciation ===
-*[[w:IPA|IPA]]: /wεəɻ/
-
-=== Verb ===
-'''to wear''' ([[wore]], [[worn]])
-
-# to [[put]] on an item of [[clothing]]
-# to [[tire]] out.
-#{{nautical}} To bring a [[sailing]] [[ship]] onto the other [[tack]] by bringing the [[wind]] around the [[stern]] (as opposed to [[tacking]] when the wind is brought around the [[bow]])
-
-==== Translations ====
-*Dutch: [[dragen]]
-*Esperanto: [[porti]]
-*Finnish: [[olla yllään]] (1)
-*French: [[porter]]
-*German: [[tragen]]
-*Indonesian: [[pakai]], [[pakai|memakai]], [[kena|mengenakan]]
-*Japanese: [[着る]] ([[きる]], kiru), [[かける]] (kakeru), [[つける]] (tsukeru)
-*Spanish: [[portar]]
-
-=== Noun ===
-'''wear''' ([[uncountable]])
-
-#(''in combination'') clothing (such as footwear)
-#[[Damage]] to the [[appearance]] and/or [[strength]] of an item caused by use over time
-
-====Translations====
-*Dutch: [[kledij]] ''f'' (1), [[kleding]] ''f'' (1), [[sleet]] ''m'' (2), [[slijtage]] ''f'' (2)
-*Finnish: [[asu]] (1)
-
-====Related terms====
-*[[wear and tear]]
+#redirect [[wear]]
