--- a/wiki/web_browser.wikitext
+++ b/wiki/web_browser.wikitext
@@ -1,11 +1,1 @@
-==English==
-===Pronounciation===
-SAMPA: /web br\`aUz3`/
-===Noun===
-# [[Software]] used to display the [[World Wide Web]] and often the [[Internet]] in general. Examples include [[w:Internet Explorer|Internet Explorer]] and [[w:Mozilla|Mozilla]].
-====Translations====
-*Chinese: (wangluo liulanqi, wang3luo4 liu2lan3qi4)
-*Finnish: [[selain]], [[WWW-selain]]
-*Swedish: [[webbläsare]]
-
-{{wikipedia}}
+#redirect [[web browser]]
