[[Weber]] moved to [[weber]]: Converting page titles to lowercase <Weber#168951>

--- a/wiki/weber.wikitext
+++ b/wiki/weber.wikitext
@@ -1,50 +1,1 @@
-==English==
-===Noun===
-'''weber''' 
-
-====Etymology====
-:Named after the German physicist Wilhelm Eduard Weber.
-
-#In the [[International System of Units]], the [[derived unit]] of [[magnetic flux]]; the flux linking a [[circuit]] of one turn that produces an [[electromotive force]] of one [[volt]] when reduced uniformly to zero in one [[second]].  Symbol: Wb
-
-====Translations====
-
-*French: weber ''m''
-*[[Interlingua]]: weber
-*[[Portuguese]]: weber ''m'' (pl: ''webers'')
-*[[Polish]]: weber ''m''
-*Spanish: weber ''m''
-*Swedish: [[weber#Swedish|weber]] ''c''
-
-===See also===
-:[[w:weber|Wikipedia article '''weber''']]
-
-----
-==French==
-===Noun===
-'''weber''' ''m''
-
-#weber
-
-----
-==German==
-===Noun===
-'''Weber''' ''m'' (plural: Weber, female: [[Weberin]])
-
-#[[Weaver]], someone who weaves.
-
-----
-==Spanish==
-===Noun===
-'''weber''' ''m''
-
-#weber
-----
-==Swedish==
-===Noun===
-'''weber''' ''c''
-
-#weber
-
-[[fr:weber]]
-[[gl:Weber]]
+#redirect [[weber]]
