[[Wed]] moved to [[wed]]: Converting page titles to lowercase <Wed#169014>

--- a/wiki/wed.wikitext
+++ b/wiki/wed.wikitext
@@ -1,41 +1,1 @@
-=== Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'wεd/
-
-=== Verb ===
-
-'''to wed''' ([[wed]] / [[wedded]], wed / wedded)
-
-# to [[marry]] two people
-
-====Translations====
-{| border=0 width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to I go here-->
-*[[Dutch]]: [[trouwen]]
-*[[Esperanto]]: [[geedzigi]] (straight couple), [[edzigi]] or [[gejedzigi]] (gay couple), [[edzinigi]] (lesbian couple)
-*{{fi}}: [[avioitua]], [[mennä]] [[naimisiin]]
-*[[French]]: [[marier]]
-*[[German]]: [[trauen]]
-*[[Indonesian]]: [[nikah|menikahi]], [[nikah|menikah]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from J to Z go here-->
-*[[Japanese]]: [[結婚]]する ([[けっこん]]する, kekkon-suru)
-*[[Spanish]]: [[casar]]
-|}
-|}
-
-----
-
-==[[Dutch]]==
-
-=== Verb ===
-
-'''wed'''
-
-# first person singular present tense of [[wedden]]
+#redirect [[wed]]
