[[Weg]] moved to [[weg]]: Converting page titles to lowercase <Weg#169043>

--- a/wiki/weg.wikitext
+++ b/wiki/weg.wikitext
@@ -1,13 +1,1 @@
-==Dutch==
-===Noun===
-'''weg''' ''m'' (plural: [[wegen]], diminutive: [[wegje]], [[wegeltje]])
-
-# [[dirt road]], [[way]]
-
-===Adjective===
-'''weg'''
-
-# [[gone]], [[disappeared]], [[away]]
-
-[[nl:weg]]
-[[vi:weg]]
+#redirect [[weg]]
