[[Weiß]] moved to [[weiß]]: Converting page titles to lowercase <Weiß#169062>

--- a/wiki/wei%C3%9F.wikitext
+++ b/wiki/wei%C3%9F.wikitext
@@ -1,10 +1,1 @@
-==German==
-===Pronunciation===
-{{IPA|[vais]}}
-===Adjective===
-#[[white]]
-
-[[Category:German adjectives]]
-
-[[de:weiß]]
-[[pl:Weiß]]
+#redirect [[weiß]]
