[[Wen]] moved to [[wen]]: Converting page titles to lowercase <Wen#169117>

--- a/wiki/wen.wikitext
+++ b/wiki/wen.wikitext
@@ -1,23 +1,1 @@
-==English==
-===Noun===
-'''wen'''
-# [[cyst]], [[spot]] or [[zit]] on the [[skin]]
-
-[[Category:English concrete nouns]]
-----
-==Dutch==
-===Verb===
-'''wen'''
-
-# first person singular present tense of [[wennen]]
-
-[[Category:Dutch language]]
-----
-==German==
-===Pronunciation===
-{{IPA|[veːn]}}
-===Interrogative pronoun===
-[[Accusative]] of ''[[wer]]''
-#[[whom]]
-
-[[Category:German pronouns]]
+#redirect [[wen]]
