--- a/wiki/weltanschauung.wikitext
+++ b/wiki/weltanschauung.wikitext
@@ -1,32 +1,1 @@
-=={{en}}==
-
-===Etymology===
-From {{de}}.
-
-===Noun===
-'''Weltanschauung''' (''Plural:'' [[Weltanschauungs]] ''or'' [[Weltanschauungen]])
-
-#A [[comprehensive]] [[conception]], [[apprehension]] or [[view]] of the [[world]], esp.ecially from a specific [[standpoint]]; a [[worldview]]
-#: ''Your background and experiences must give you a unique '''weltanschauung'''.''
-
-One's weltanschauung is one's fundamental beliefs about the world and life. In English the term is often represented by the phrase "world and life view."
-{{seeCites}}
-
-====Translations====
-*German: Weltanschauung ''f''
-*Swedish: [[världsåskådning]] ''c''
-
-[[Category:English abstract nouns]]
-[[Category:German derivations]]
-----
-
-=={{de}}==
-===Etymology===
-Compound of [[Welt]], ''world'' + [[Anschauung]], ''view''.
-===Noun===
-'''Weltanschauung''' ''f''
-# [[worldview]]
-
-[[Category:German nouns]]
-
-[[de:Weltanschauung]]
+#redirect [[weltanschauung]]
