[[Wend]] moved to [[wend]]: Converting page titles to lowercase <Wend#169119>

--- a/wiki/wend.wikitext
+++ b/wiki/wend.wikitext
@@ -1,9 +1,1 @@
-==English==
-===Verb===
-'''to wend'''  (''transitive'' and ''intransitive'')
-#to [[go]] or [[proceed]] [[along]] some [[course]] or [[way]]
-#* We '''wended''' our weary way westward
-===Proper noun===
-'''Wend'''
-#a member of a [[Slavic]] [[people]] from the [[border]]s of [[Germany]] and [[Poland]]; a [[Sorb]]
-[[Category:English verbs]]
+#redirect [[wend]]
