[[Wert]] moved to [[wert]]: Converting page titles to lowercase <Wert#169137>

--- a/wiki/wert.wikitext
+++ b/wiki/wert.wikitext
@@ -1,13 +1,1 @@
-==English==
-===Verb form===
-'''wert'''
-
-#[[Archaic]] [[second-person]] [[singular]] [[past tense]] of '''to [[be]]'''.
-
-====Synonyms====
-*[[wast]]
-
-===See also===
-*[[art]]
-*[[wast]]
-*[[were]]
+#redirect [[wert]]
