--- a/wiki/western.wikitext
+++ b/wiki/western.wikitext
@@ -1,13 +1,1 @@
-==English==
-===Adjective===
-'''western'''
-# Of, facing, situated in, or related to the [[west]]
-#* the western approaches
-# (of a wind) [[blow]]ing from the west; [[westerly]]
-# (Capitalised) Of, situated in, or related to the [[West]]
-#* Western democracy
-===Noun===
-'''western'''
-# A [[film]], or some other dramatic work, set in, the [[historic]] [[American]] West (west of the [[Mississippi]])
-
-[[fr:western]]
+#redirect [[western]]
