--- a/wiki/whetstone.wikitext
+++ b/wiki/whetstone.wikitext
@@ -1,12 +1,1 @@
-==English==
-===Noun===
-{{wikipedia}}
-'''whetstone'''
-#a [[hard]] [[fine]]-[[grain]]ed [[stone]] for [[sharpening]] [[edged]] [[tool]]s
-#a [[benchmark]] for [[evaluating]] the [[power]] of a [[computer]]
-====Translations====
-*{{hu}}: [[köszörűkő]] (1)
-===Proper noun===
-'''Whetstone'''
-#A [[location]] in [[Barnet]], [[London]], [[England]]
-[[Category:English nouns]]
+#redirect [[whetstone]]
