--- a/wiki/whig.wikitext
+++ b/wiki/whig.wikitext
@@ -1,7 +1,1 @@
-==English==
-
-===Noun===
-
-'''whig'''
-
-#Acidulated whey, sometimes mixed with buttermilk and sweet herbs, used as a cooling beverage.
+#redirect [[whig]]
