[[Whisky]] moved to [[whisky]]: Converting page titles to lowercase <Whisky#169329>

--- a/wiki/whisky.wikitext
+++ b/wiki/whisky.wikitext
@@ -1,52 +1,1 @@
-== English ==
-=== Noun ===
-'''whisky'''
-# an alcoholic liquor distilled from fermented grain and usually aged by storing in barrels.
-# a drink of whisky
-==== Alternate Spelling ====
-* [[whiskey]]: in Ireland and USA
-
-==== Translations ====
-*Chinese: [[威士忌酒]]
-*Dutch: [[wisky]] ''m''
-*French: [[whiskey]] ''m''
-*German: Whisky ''m''
-*Greek: [[ουίσκυ]] ''n''
-*{{ga}}: [[uisce beatha]]
-*Italian: whisky ''m''
-*Japanese: [[ウィスキー]] (wisukii)
-*Korean: [[위스키]]
-*Russian: [[виски]] ''m'' (viski)
-*Slovak: whisky ''f''
-*Spanish: whisky ''m''
-*Ukrainian: [[горілка]] ''f'' (horilka)
-
-----
-
-== Dutch ==
-=== Noun ===
-'''whisky''' ''m''
-
-# [[whiskey]]
-# whisky
-
-----
-== Slovak ==
-=== Noun ===
-'''whisky''' ''f nondeclinable''
-# [[whiskey]]
-# whisky
-==== Singular ====
-''all cases'' '''whisky'''
-==== Plural ====
-''all cases'' '''whisky'''
-
-----
-
-==Spanish==
-
-===Noun===
-'''whisky''' ''m''
-
-# A distilled alcoholic liquor. See [[güisqui]].
-[[Category:Scottish Gaelic derivations]]
+#redirect [[whisky]]
