[[Wi]] moved to [[wi]] <wi#67191>

--- a/wiki/WI.wikitext
+++ b/wiki/WI.wikitext
@@ -1,7 +1,10 @@
-==English==
+==Patois==
 
-==={{Abbreviation}}===
-#[[Wisconsin]], a {{USstate}}
-#[[Women's Institute]]
+===Pronoun===
+'''wi'''
+# [[we]]
+# [[us]]
+# [[ours]]
 
-[[pl:WI]]
+===Adjective===
+# [[our]]
