--- a/wiki/wiccan.wikitext
+++ b/wiki/wiccan.wikitext
@@ -1,11 +1,1 @@
-==English==
-
-===Adjective===
-# Of, or pertaining to wicca.
-#: ''The precise origin of many wiccan practices is controversial.''
-
-===Related terms===
-*[[wicca]]
-
-===See also===
-*[[pagan]]
+#redirect [[wiccan]]
