[[Wicca]] moved to [[wicca]]: Converting page titles to lowercase <Wicca#169440>

--- a/wiki/wicca.wikitext
+++ b/wiki/wicca.wikitext
@@ -1,19 +1,1 @@
-==English==
-
-===Pronunciation===
-*IPA: /wɪkə/
-*SAMPA: /wIk@/
-
-===Homophones===
-* [[wicker]] (''in non-[[rhotic]] dialects'')
-
-===Noun===
-# A modern pagan religion.
-#: ''Wicca shares a number of elements with other religions.''
-
-===Derived terms===
-*[[wiccan]]
-
-===External links===
-* [[w:wicca|Wiktionary article on wicca]]
-* [[w:witchcraft|Wikipedia article on witchcraft]]
+#redirect [[wicca]]
