[[Wiener]] moved to [[wiener]]: Converting page titles to lowercase <Wiener#169485>

--- a/wiki/wiener.wikitext
+++ b/wiki/wiener.wikitext
@@ -1,4 +1,1 @@
-===Noun===
-#a [[sausage]] made from [[beef]],[[chicken]] or [[pork]],used in [[hot dog]]s
-===Etymology===
- German ''wiener'' [[Viennese]],they were originally made in [[Vienna]],Austria
+#redirect [[wiener]]
