--- a/wiki/wile.wikitext
+++ b/wiki/wile.wikitext
@@ -1,7 +1,1 @@
-==English==
-
-===Noun===
-
-'''wile'''
-
-#A trick or stratagem practiced for insnaring or deception; a sly, insidious; artifice; a beguilement; an allurement.
+#redirect [[wile]]
