--- a/wiki/wilde.wikitext
+++ b/wiki/wilde.wikitext
@@ -1,12 +1,1 @@
-==[[Dutch]]==
-
-===[[Noun]]===
-#[[savage]]
-
-===[[Adjective]]===
-'''wilde''' flexed form of [[wild]]
-#[[wild]]
-
-===[[Verb]]===
-'''wilde''' singular forms of past tense of [[willen]] (to [[want]])
-#[[wanted]]
+#redirect [[wilde]]
