[[Will]] moved to [[will]]: Converting page titles to lowercase <Will#170033>

--- a/wiki/will.wikitext
+++ b/wiki/will.wikitext
@@ -1,85 +1,1 @@
-==English==
-
-===Noun===
-'''will''', plural '''[[wills]]'''
-
-#A person's intent, [[volition]], decision
-#A legal document that states what goes to whom when the will's maker dies
-
-====Translations====
-*Czech: [[vůle]] ''f'' (1), [[testament]] ''m'' (2)
-*Esperanto: [[volo]] (1), [[testamento]] (2)
-*Finnish: [[tahto]] (1), [[testamentti]] (2)
-*French: [[volonté]] ''f'' (1), [[testament]] ''m'' (2)
-*Latin:  [[testamentum]] ''n'' (2)
-*Polish: [[testament]] ''m''
-*Portuguese: [[vontade]] ''f'' (1), [[testamento]] ''m'' (2)
-*Slovak: [[vôľa]] ''f'' (1), [[testament]] ''m'' (2)
-*Swedish: [[vilja]] ''c'' (1), [[önskan]] ''c'' (1), [[testamente]] ''n'' (2)
-
-===Proper Noun===
-'''Will'''
-
-#Short form of ''[[William]]''
-
-===Auxiliary verb===
-'''will''', past '''[[would]]'''
-
-
-#Indicating intent to perform the action in the future, or expectation that an event will occur.
-#:''I will go to the store.''
-#:''It will rain this afternoon.''
-# [[wish]], intend to do something
-
-
-====Usage Notes====
-Unlike most verbs, as an auxiliary verb '''will''' does not add a final ''"s"'' in the third person singular of the present tense.
-
-Historically, the present tense is '''will''' and the past tense is '''[[would]]'''.
-
-'''Will''' in the first person is sometimes used for an emphatic future tense.  See also the usage note at '''[[shall]]'''.
-
-====Translations====
-
-*Esperanto: ...-os (1), [[voli]] (2)
-*German: [[werden]] (1)
-*Swedish: [[kommer att]] (1)
-
-===Related Terms===
-*[[volition]]
-*[[voluntary]]
-*[[willing]]
-*[[would]]
-
-====See also====
-*[[bequeath]]
-*[[shall]]
-*[[going to]]
-*[[modal verb]]
-*[[testament]]
-
-
-===Transitive verb===
-'''will''', third person singular '''[[wills]]''', present participle '''[[willing]]''', past and past participle '''[[willed]]'''
-
-# intend, decide to do something, wish strongly
-#: "Sophia can win the race if she wills it."
-# Give instructions for disposing of (something) in a will.
-#:''He willed his stamp collection to the local museum.''
-
-====Translations====
-
-*Esperanto: [[voli]] (1), [[testamenti]] (2)
-*Swedish: [[vilja]] (1), [[testamentera]] (2)
-
-[[pt:Will]]
-[[sv:will]]
-[[Category:Positive words]]
-
-----
-==German==
-
-'''will'''
-===Verb===
-# ''First and third person singular of [[wollen]]'', [[want]]
-[[Category:100 English basic words]]
+#redirect [[will]]
