--- a/wiki/willie.wikitext
+++ b/wiki/willie.wikitext
@@ -1,8 +1,1 @@
-==English==
-===Noun===
-'''willie'''
-# (''slang'') penis
-====Translations====
-*German: [[Pimmel]] ''m'' (1)
-===Related terms===
-*[[willie-wag]]
+#redirect [[willie]]
