[[Willow]] moved to [[willow]]: Converting page titles to lowercase <Willow#170046>

--- a/wiki/willow.wikitext
+++ b/wiki/willow.wikitext
@@ -1,9 +1,1 @@
-==English==
-===Noun===
-'''willow'''
-
-#[[deciduous]] [[tree]] or [[shrub]] in the [[genus]] ''[[Salix]]'', in the willow family [[Salicaceae]], found primarily on moist soils in cooler zones in the northern [[hemisphere]]
-#{{cricket}} (colloquial) A [[cricket bat]]
-
-====Translations====
-* Czech: [[vrba]] ''f'' (1)
+#redirect [[willow]]
