[[Willy]] moved to [[willy]]: Converting page titles to lowercase <Willy#170048>

--- a/wiki/willy.wikitext
+++ b/wiki/willy.wikitext
@@ -1,18 +1,1 @@
-==English==
-===Proper noun===
-'''Willy''' (''plural'' '''Willys''')
-
-#A [[diminutive]] of the male [[given name]] [[William]].
-
-===Noun===
-'''willy, willie''' (''plural'' '''willies''')
-
-#(''British''; ''[[informal]]'') [[Penis]]. Usually used by parents or children when speaking with children.
-
-''[the]'' '''willies'''
-
-#(''[[informal]]'') A feeling of nervousness or fear. ''Staying in the haunted house gives me the willies.''
-
-====Etymology====
-'''willy, willie'''
-Possibly a contraction of ''membrum virile'', a Latin term used in English in the nineteenth century.  However, it is also possible that ''willy'' is simply the use of a proper name in English (''Willy'' is a pet-name from ''William''); cf. the vulgar usage of ''dick'' and ''fanny'', which also derive from proper names.
+#redirect [[willy]]
