[[Winkel]] moved to [[winkel]]: Converting page titles to lowercase <Winkel#170131>

--- a/wiki/winkel.wikitext
+++ b/wiki/winkel.wikitext
@@ -1,15 +1,1 @@
-==Dutch==
-===Noun===
-'''winkel''' ''m''
-
-#[[shop]]
-
-----
-
-==German==
-===Noun===
-'''Winkel''' ''m''
-
-#[[angle]]
-
-[[nl:winkel]]
+#redirect [[winkel]]
