--- a/wiki/wink.wikitext
+++ b/wiki/wink.wikitext
@@ -1,18 +1,1 @@
-==English==
-===Verb===
-'''to wink''' [[intransitive]]
-#To [[blink]] with only one [[eye]] as a [[message]], [[signal]], or [[suggestion]]
-#To [[twinkle]]
-'''to wink''' [[transitive]]
-#To send a message etc by winking
-===Noun===
-'''wink'''
-#An act of winking, or a message etc sent by winking
-#A [[brief]] [[time]]; an [[instant]]
-#A twinkle
-#A brief [[period]] of [[sleep]]; especially [[forty winks]]
-==Translations==
-*French: clin d'oeil
-[[Category:English intransitive verbs]]
-[[Category:English transitive verbs]]
-[[Category:English nouns]]
+#redirect [[wink]]
