[[Wobbly]] moved to [[wobbly]]: Converting page titles to lowercase <Wobbly#170251>

--- a/wiki/wobbly.wikitext
+++ b/wiki/wobbly.wikitext
@@ -1,5 +1,1 @@
-==English==
-===Adjective===
-'''wobbly'''
-#[[unsteady]] and [[tending]] to [[wobble]]
-[[Category:English adjectives]]
+#redirect [[wobbly]]
