[[Wolf Cub]] moved to [[wolf Cub]] <Wolf Cub#89169>

--- a/wiki/wolf_cub.wikitext
+++ b/wiki/wolf_cub.wikitext
@@ -1,16 +1,8 @@
 ==English==
 ===Noun===
-'''wolf cub'''
+'''Wolf Cub''' (''plural'' '''Wolf Cubs''')
 
-#A young [[wolf]].
+#(''mostly British'') A [[Cub Scout]].
 
-====Synonyms====
-*[[wolfling]]
-
-====Translations====
-*Dutch: [[welp]] ''m'', [[wolvenwelp]] ''m''
-*French: [[louveteau]] ''m''
-*Lithuanian: [[vilkiukas]] ''m''
-*{{no}}: [[ulvunge]] ''m''
-*Persian: [[بچه گرگ]] (bache-gorg)
-*Spanish: [[cachorro de lobo]] ''m''
+===See also===
+*[[wolf cub]]
