[[Wo]] moved to [[wo]]: Converting page titles to lowercase <Wo#170246>

--- a/wiki/wo.wikitext
+++ b/wiki/wo.wikitext
@@ -1,20 +1,1 @@
-==German==
-===Adverb===
-'''wo'''
-#[[where]]
-#[[somewhere]] ''dialect''
-
-===Conjunction===
-'''wo'''
-#[[when]]
-
-===Noun===
-'''wo'''
-#[[where]]
-
-===Related words===
-* [[woanders]], [[wobei]]
-
-[[Category:German language]]
-
-[[pl:Wo]]
+#redirect [[wo]]
