[[Wonder]] moved to [[wonder]]: Converting page titles to lowercase <Wonder#170301>

--- a/wiki/wonder.wikitext
+++ b/wiki/wonder.wikitext
@@ -1,41 +1,1 @@
-==English==
-===Noun===
-'''wonder''' ([[wonders]])
-
-====Translations====
-*Chinese: [[奇蹟]], [[奇迹]]
-*Dutch: wonder ''n''
-*Dyirbal (Jirribal): [[mali]]?
-*French: [[merveille]] ''f''
-*German: [[Wunder]] ''n''
-*Japanese: [[驚異]]
-*Korean: [[경이]]
-*Portuguese: [[maravilha]] ''f''
-*Russian: [[интерес]] ''m'' (interes)
-*Spanish: [[maravilla]] ''f''
-*Swedish: [[under#Swedish|under]] ''n'', [[mirakel]] ''n''
-
-===Verb===
-'''to wonder''' ([[wonders]], [[wondered]], [[wondering]])
-
-====Translations====
-*Dutch: zich [[afvragen]]
-*German: [[wundern]]
-*Italian: [[domandarsi]]
-*Russian: [[интересовать]] (interesovat')
-*Spanish: [[preguntarse]]
-*Swedish: [[undra]]
-
-===Derived terms===
-*[[wonderful]]
-*[[wonderment]]
-
-----
-==Dutch==
-===Noun===
-'''wonder''' ''n''
-
-# [[miracle]]
-
-====Synonyms====
-*[[mirakel]]
+#redirect [[wonder]]
