[[Won]] moved to [[won]]: Converting page titles to lowercase <Won#170297>

--- a/wiki/won.wikitext
+++ b/wiki/won.wikitext
@@ -1,76 +1,1 @@
-==English==
-===Etymology===
-{{sectstub}}
-
-====Pronunciation====
-*wŭn, /wʌn/, /<tt>wVn</tt>/
-*:'''Homophones''': [[one]]
-*:[[Rhymes:English:-ʌn|Rhymes: -ʌn]]
-
-====Verb form====
-'''won'''
-
-#[[Past tense]] of '''to [[win]]'''.
-#[[Past participle]] of '''to win'''.
-
-=====Translations=====
-
-'''past tense'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
-*Dutch: won, [[wonnen]]
-*French: [[gagner|gagna]] (''[[third-person]] [[past historic]]'')
-*Italian: [[vincere|vinse]] (''[[third-person]] [[past historic]]'')
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
-*Russian: [[победил]]
-*Swedish: [[vann]]
-|}
-|}
-
-'''past participle'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
-*Dutch: [[gewonnen]]
-*French: [[gagné]] ''m'', gagnée ''f''
-*Italian: [[vinto]] ''m'', vinta ''f''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
-*Swedish: [[vunnit]]
-|}
-|}
-
-===Etymology===
-Korean
-
-====Pronunciation====
-*wŏn, /wɒn/, /<tt>wQn</tt>/
-*:[[Rhymes:English:-ɒn|Rhymes: -ɒn]]
-
-====Noun====
-'''won''' (''plural'' '''won''')<!--the plural is the same as the singular-->
-
-#The [[currency]] of [[Korea]].
-
-======Translations======
-*Korean: [[원]] ([[圓]], Wŏn, Won)
-
-=====See also=====
-*[[₩]], [[￦]]
-*[[전]] ([[錢]], chŏn, jeon)
-*[[㌆]]
-
-[[Category:English heteronyms]]
-[[Category:English invariant nouns]]
+#redirect [[won]]
