[[Wood]] moved to [[wood]]: Converting page titles to lowercase <Wood#170310>

--- a/wiki/wood.wikitext
+++ b/wiki/wood.wikitext
@@ -1,98 +1,1 @@
-==English==
-
-===Homophones===
-*[[would]]
-
-===Noun===
-'''wood''' (''[[uncountable]] and [[countable]]'')
-
-#''([[uncountable]])'' The substance making up the central part of the [[trunk]] and [[branches]] of a [[tree]] that can be used by humans to manufacture various items.
-#''([[countable]])'' A type of [[golf club]] the [[head]] of which is frequently made of wood.
-
-====Derived terms====
-*[[hardwood]]
-*[[softwood]]
-*[[woodchopper]]
-*[[woodpecker]]
-*[[woody]]
-
-====Translations====
-
-'''substance'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*Breton: [[koad]] ''m'' -eier / -où
-*Catalan: [[fusta]] ''f'' [[:ca:fusta|(ca)]]  
-*Chinese: [[木]]
-*Dutch: [[hout]] ''n''
-*Esperanto: [[ligno]]
-*Estonian: [[puit]]
-*Finnish: [[puu#Finnish|puu]]
-*French: [[bois]] ''m''
-*Frisian: [[hout]] ''n''
-*German: [[Holz]] ''n''
-*Greek: [[ ]] (xylo)
-*[[Guarani]]: [[yvyra]]
-*Hungarian: [[fa]]
-*Indonesian: [[kayu]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*Interlingua: [[ligno]]
-*Italian: [[legno]] ''m''
-*Japanese: [[木]]
-*Latin: [[lignum]] (1), [[silva]] (2)
-*Polish: [[drewno]] ''n''
-*Portuguese: [[madeira]] ''f''
-*Romanian: [[lemn]] ''n''
-*Slovene: [[les]] ''m''
-*Spanish: [[madera]] ''f''
-*Swedish: [[trä]]
-*Tupinambá: [[ybyrá]]
-*Turkish: [[odun]]
-*Welsh: [[coed]]
-*Ossetian: [[хъæд]]
-|}
-|}
-
-'''type of golf club'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*Finnish: [[puu#Finnish|puu]]
-*German: [[Holz]] ''n''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-|}
-
-===Adjective===
-'''wood''' (''no [[comparative]] or [[superlative]]'')
-#Made of wood.
-
-====Synonyms====
-*[[wooden]]
-
-====Translations====
-*Finnish: [[puinen]], [[puu#Finnish|puu-]] (''prefix in a compound'')
-
-'''made of wood'''
-''See [[wooden]]''
-
-===Verb===
-'''wood''' ([[wooded]], [[wooding]])
-
-[[Transitive]]
-#Supply or cover with trees.
-#:He is down in the '''wooded''' dell.
-
-[[Category:1000 English basic words]]
-
-[[fr:wood]]
-[[fi:Wood]]
+#redirect [[wood]]
