--- a/wiki/wonderbra.wikitext
+++ b/wiki/wonderbra.wikitext
@@ -1,9 +1,1 @@
-== English ==
-
-=== Proper Noun ===
-'''Wonderbra'''&reg;
-# a specialty [[brassiere]] manufactured by the [[Sara Lee]] Corporation beginning in 1994
-
-=== Noun ===
-'''wonderbra'''
-# (informal) any padded enhancement brassiere
+#redirect [[wonderbra]]
