[[Woody]] moved to [[woody]]: Converting page titles to lowercase <Woody#170324>

--- a/wiki/woody.wikitext
+++ b/wiki/woody.wikitext
@@ -1,6 +1,1 @@
-{{-en-}}
-
-{{-noun-}}
-'''woody'''
-#An [[station-wagon]] that has a [[retro]] wooden exterior, associated with Southern California surfing culture.
-#{{cattag|slang}}: an erection.
+#redirect [[woody]]
