--- a/wiki/Woop_Woop.wikitext
+++ b/wiki/Woop_Woop.wikitext
@@ -1,12 +1,7 @@
+==English==
 ===Noun===
-'''woop-woop'''
-
-(Australian slang) An extremely remote area. "Middle of nowhere".
-
-===Usage===
-#They live in the back of Woop-woop.
-#They live out beyond Woop-woop.
-
-===Alternate Spellings===
-#[[Woop Woop]]
-#[[Woop-Woop]]
+(Australian slang) An extremly remote area. "Middle of nowhere".
+<P>
+Typically:
+They live in the back of Woop-woop.
+They live out beyond Woop-woop.
