--- a/wiki/woomera.wikitext
+++ b/wiki/woomera.wikitext
@@ -1,7 +1,1 @@
-==English==
-===Noun===
-Stick with a hooked end, used for throwing a spear.
-===Proper Noun===
-Area of South Australia used in Australia's rocket launch program.
-===Pronunciation===
-Woom.er.a
+#redirect [[woomera]]
