[[Worship]] moved to [[worship]]: Converting page titles to lowercase <Worship#170427>

--- a/wiki/worship.wikitext
+++ b/wiki/worship.wikitext
@@ -1,18 +1,1 @@
-=== Verb ===
-
-#to [[honor]], to [[adore]]
-
-=== Translations ===
-
-*Italian: [[adorare]] 
-
-=== Noun ===
-
-#the act of revering a deity
-
-=== Translations ===
-*Czech: [[uctívání]]  ''n''
-*French: [[culte]] ''m''
-*Italian: [[culto]] ''m''
-*Slovak: [[uctievanie]]  ''n''
-*Swedish: [[dyrka]], [[avguda]]
+#redirect [[worship]]
