[[Wright]] moved to [[wright]]: Converting page titles to lowercase <Wright#170489>

--- a/wiki/wright.wikitext
+++ b/wiki/wright.wikitext
@@ -1,15 +1,1 @@
-==English==
-===Pronunciation===
-*rīt, /raɪt/, /<tt>raIt</tt>/
-*:'''Homophones''': [[right]], [[rite]], [[write]]
-*:[[Rhymes:English:-aɪt|Rhymes: -aɪt]]
-
-===Noun===
-'''wright'''
-
-# a builder or creator of something
-
-====Derived terms====
-*[[playwright]]
-*[[shipwright]]
-*[[wheelwright]]
+#redirect [[wright]]
