--- a/wiki/wunderkind.wikitext
+++ b/wiki/wunderkind.wikitext
@@ -1,8 +1,1 @@
-== English ==
-=== Etymology ===
-German; ''[[wunder]]'' "wonder" + ''[[kind]]'' "child"
-
-=== Noun ===
-'''wunderkind''' ''pl.'' '''wunderkinder'''
-# a [[child]] [[prodigy]]; a [[phenom]]
-# a highly talented or [[gifted]] individual; one who is successful at a young age
+#redirect [[wunderkind]]
