--- a/wiki/WTF.wikitext
+++ b/wiki/WTF.wikitext
@@ -1,15 +1,1 @@
-==English==
-==={{Abbreviation}}===
-'''WTF''' ''or'' '''wtf'''
-
-#(''taboo Internet slang'') [[What the fuck]].
-
-====Usage note====
-'''WTF''' may be used to introduce a question, as in "WTF are you talking about?" or as an interjection "WTF?  That's a load of bull!" Sometimes substituted with "whiskey tango foxtrot."
-
-====Translations====
-<!--Add ABBREVIATIONS here, where these exist.  Put the full form on the page for "what the fuck".-->
-*Norwegian: [[hva faen]]?<!--provide an abbreviation, if one exists-->
-
-[[cs:WTF]]
-[[de:WTF]]
+#REDIRECT [[WTF]]
