--- a/wiki/xerox.wikitext
+++ b/wiki/xerox.wikitext
@@ -1,26 +1,1 @@
-==English==
-===Noun===
-'''Xerox''' &#8482;
-#Trademark name for a type of [[photocopier]]
-#:''Our new photocopying machine is a Xerox&reg;''.
-
-====Translations====
-
-*[[Bulgarian]]: [[ксерокс]] ''m''
-*[[Dutch]]: [[fotokopieerapparaat]]
-*[[Interlingua]]: [[photocopiator]], [[xeroxator]]
-*[[Spanish]]: [[fotocopiador]], [[xeroxeador]]
-*[[Portuguese]]: [[:pt:fotocopiadora]], [[:pt:xerox]]
-
-===Verb===
-'''to Xerox'''
-#''Slang''. To make a copy by means of a photocopying machine such as those made under the trademark ''Xerox''&#8482;.
-#:''I xeroxed the report for all the people at the meeting''.
-
-====Translations====
-*[[Bulgarian]]: [[копирам]]
-*[[Dutch]]: [[fotokopiëren]]
-*[[Interlingua]]: [[photocopiar]], [[xeroxar]]
-*[[Spanish]]: [[fotocopiar]], [[xeroxear]]
-*[[Portuguese]]: [[fotocopiar]], [[xerocar]]
-[[Category:Greek derivations]]
+#redirect [[xerox]]
