[[Xi]] moved to [[xi]] <xi#29435>

--- a/wiki/xi.wikitext
+++ b/wiki/xi.wikitext
@@ -1,5 +1,12 @@
-*Number of the Roman numeral: '''XI''' (11)
-**Previous: [[X]] (10)
-**Next: [[XII]] (12)
+*Letter of the Greek alphabet: &#926; &#958;
+**Previous: [[nu|&#925;]]
+**Next: [[omicron|&#927;]]
 
-# A [[Roman numeral]] representing eleven ([[eleven|11]]).
+#The fourteenth letter of [[Classical Greek|Classical]] and [[Modern Greek]].  The 15th in [[Ancient Greek|Ancient]] and [[Old Greek]].
+
+==== Translations ====
+*[[Interlingua]]: xi
+*[[Portuguese]]: xi ''m'', [[csi]] ''m''
+
+[[fr:xi]]
+[[gl:Xi]]
