--- a/wiki/xi.wikitext
+++ b/wiki/xi.wikitext
@@ -1,12 +1,1 @@
-*Letter of the Greek alphabet: &#926; &#958;
-**Previous: [[nu|&#925;]]
-**Next: [[omicron|&#927;]]
-
-#The fourteenth letter of [[Classical Greek|Classical]] and [[Modern Greek]].  The 15th in [[Ancient Greek|Ancient]] and [[Old Greek]].
-
-==== Translations ====
-*[[Interlingua]]: xi
-*[[Portuguese]]: xi ''m'', [[csi]] ''m''
-
-[[fr:xi]]
-[[gl:Xi]]
+#redirect [[xi]]
