--- a/wiki/xenon.wikitext
+++ b/wiki/xenon.wikitext
@@ -1,108 +1,1 @@
-==English==
-{{elements|Xe|Iodine|I|Caesium|Cs}}
-=== Noun ===
-'''xenon''' ([[w:Xenon|Wikipedia:Xenon]])
-
-# a heavy, gaseous chemical element (''symbol'' Xe) of the argon group with an [[atomic number]] of 54.  It naturally occurs in vapors from hot springs and, in trace amounts, in the air
-
-==== Translations ====
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*[[Afrikaans]]: xenon
-*[[Albanian]]: [[ksenon]]
-*[[Arabic]]: [[إكسينون]]
-*[[Armenian]]: xenon
-*[[Basque]]: [[xenona]]
-*[[Belarussian]]: [[ксэнон]]
-*[[Breton]]: [[ksenon]]
-*[[Bulgarian]]: [[ксенон]] ''m''
-*[[Catalan]]: [[xenó]]
-*[[Chinese]]: [[氙]]
-*[[Cornish]]: xenon
-*[[Croatian]]: [[ksenon]]
-*[[Czech]]: xenon
-*[[Danish]]: xenon
-*[[Dutch]]: xenon ''n''
-*[[Esperanto]]: [[ksenono]]
-*[[Estonian]]: [[ksenoon]]
-*[[Faroese]]: xenon
-*[[Finnish]]: [[ksenon]]
-*[[French]]: [[xénon]] ''m''
-*[[Frisian]]: xenon
-*[[Friulian]]: xenon
-*[[Galician]]: xenon
-*[[Georgian]]: [[ქსენონი]]
-*[[German]]: Xenon ''n''
-*[[Hebrew]]: [[קסנון]]
-*[[Hungarian]]: xenon
-*[[Icelandic]]: xenon
-*[[Interlingua]]: xenon
-*[[Irish]]: [[xeanón]]
-*[[Italian]]: xenon ''m'', [[xeno]] ''m''
-*[[Japanese]]: [[キセノン]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*[[Kashmiri]]: [[ksenón]]
-*[[Kazakh]]: [[ксенон]]
-*[[Latin]]: [[xenon]]
-*[[Latvian]]: [[ksenons]]
-*[[Lithuanian]]: [[ksenonas]]
-*[[Luxembourgish]]: xenon
-*[[Macedonian]]: [[ксенон]]
-*[[Malay]]: [[xenon,]]
-*[[Maltese]]: [[Żenon]]
-*[[Manx]]: xenon
-*[[Modern Greek]]: [[Ξενο]] '' ''
-*[[Mongolian]]: [[ксенон]]
-*[[Norwegian]]: xenon
-*[[Polish]]:  [[ksenon]] ''m''
-*[[Portuguese]]: [[xénon]] (from Peter Vanderkrogt's site)
-*[[Portuguese]]: [[xenônio]] ''m''
-*[[Romanian]]: xenon ''n''
-*[[Russian]]: [[ксенон]] '' ''
-*[[Scottish Gaelic]]: [[xeanon]]
-*[[Serbian]]: [[ксенон]]
-*[[Slovak]]: [[xenón]]
-*[[Slovenian]]: [[ksenon]]
-*[[Spanish]]: [[xenón]] ''m''
-*[[Swedish]]: xenon
-*[[Tajik]]: [[ksenon]]
-*[[Thai]]: [[ซีนอน]]
-*[[Turkish]]: [[ksenon]]
-*[[Ukrainian]]: [[ксенон]]
-*[[Uzbek]]: [[ксенон]]
-*[[Vietnamese]]: xenon
-*[[Welsh]]: xenon
-|}
-|}
-
-====External links====
-For etymology and more information refer to:
-http://elements.vanderkrogt.net/elem/xe.html
-(A lot of the translations were taken from that site with permission from the author)
-[[Category:Chemical elements]]
-[[bg:Ксенон]]
-[[ca:Xenó]]
-[[cs:Xenon]]
-[[da:Xenon]]
-[[de:Xenon]]
-[[en:Xenon]]
-[[eo:Ksenono]]
-[[es:Xenón]]
-[[et:Ksenoon]]
-[[fr:Xénon]]
-[[he:קסנון]]
-[[ja:キセノン]]
-[[ms:Xenon]]
-[[nl:Xenon]]
-[[no:Xenon]]
-[[pl:Ksenon]]
-[[pt:Xenônio]]
-[[ru:Ксенон]]
-[[simple:Xenon]]
-[[sl:Ksenon]]
-[[sv:Xenon]]
+#redirect [[xenon]]
