[[Xylitol]] moved to [[xylitol]]: Converting page titles to lowercase <Xylitol#170699>

--- a/wiki/xylitol.wikitext
+++ b/wiki/xylitol.wikitext
@@ -1,10 +1,1 @@
-==English==
-===Noun===
-{{wikipedia}}
-'''xylitol'''
-#a [[sweet]] [[white]] [[crystalline]] [[substance]] [[derived]] from [[xylose]] and used as [[sweetener]]
-#{{chemistry}} a pentahydric [[alcohol]], C<sub>5</sub>H<sub>12</sub>O<sub>5</sub>, penta-hydroxy pentane.
-====Translations====
-*Finnish: [[ksylitoli]]
-
-[[Category:English nouns]]
+#redirect [[xylitol]]
