--- a/wiki/xiphias.wikitext
+++ b/wiki/xiphias.wikitext
@@ -1,10 +1,1 @@
-==Latin==
-===Etymology===
-From Greek [[ξιφίας]], ''sword-shaped''.
-===Noun===
-'''xiphi·as''' ''m'' ''[[Wiktionary Appendix:Latin first declension|1st declension]]''
-
-#a [[swordfish]]
-
-[[la:Xiphias]]
-[[Category:Latin masculine nouns in the first declension]]
+#redirect [[xiphias]]
