--- a/wiki/xylose.wikitext
+++ b/wiki/xylose.wikitext
@@ -1,8 +1,1 @@
-==English==
-=== Noun ===
-'''xylose'''
-{{wikipedia}}
-#a [[white]] [[crystalline]] substance, a [[sugar]], [[derived]] from [[wood]]
-#{{chemistry}} One of the [[pentose]]s, C<sub>5</sub>H<sub>10</sub>O<sub>5</sub>
-==== Translations ====
-*[[Slovak]]: [[xylóza]] ''f''
+#redirect [[xylose]]
