[[Y]] moved to [[y]]: Converting page titles to lowercase <Y#170719>

--- a/wiki/y.wikitext
+++ b/wiki/y.wikitext
@@ -1,78 +1,1 @@
-==English==
-
-"y" /wAI/  (English)
-
-# Twenty-fifth letter of the [[Appendix:English alphabet|English alphabet]].
-# Twenty-fifth in a list. (''Synonyms'': [[25]], [[XXV]])
-# (''Chemistry'') Symbol for [[yttrium]].
-# Abbreviation for [[year]]. (See [[Y2K]])
-# (''TV'') Abbreviation for [[youth]] content, usually proceeded with a [[suggested]] [[age]]. ([[E.g.]] Y7)
-# (''Archaic computers'') Abbreviation for [[yes]].
-# Informal abbreviation for [[why]].
-
-====Homophones====
-*[[why]]
-*[[WI]]
-*[[WY]]
-
-===Other Forms===
-*With [[acute]]: [[ý]]
-*With [[diaeresis]]: [[ÿ]]
-*With [[circumflex]]: [[ŷ]]
-*With hook: [[ƴ]]
-*With [[macron]]: [[ȳ]]
-*With dot above: [[ẏ]]
-*With ring above: [[ẙ]]
-*With [[grave]]: [[ỳ]]
-*With dto below: [[ỵ]]
-*With hook above: [[ỷ]]
-*With [[tilde]]: [[ỹ]]
-===See Also===
-*[[U]]
-*[[V]]
-*[[Υ]] ([[upsilon]])
-*[[У]]
-*[[¥]] ([[yen]])
-
-----
-
-==French==
-===Letter===
-*[[i]]-[[grec]] /igrEk/
-
-=== Pronunciation ===
-* /i/
-
-=== Indirect object pronoun ===
-
-'''y'''
-
-#contraction of ''[[à]] le'' or ''à la''
-#:''il '''y''' a'', [[there]] is
-
-----
-
-==Spanish==
-===Letter===
-*i-[[griega]] /iGrjeGa/
-=== Pronunciation ===
-*'''y''' /i/
-
-=== Conjunction ===
-# [[and]]
-# (''numbers'') ''roughly'' and ''or'' [[plus]] 
-#: ''setenta y seis'' - "seventy-six"
-# (''colloquial'') [[well]]
-#: ''¡y por supuesto!'' - "well, of course!"
-
-----
-
-==Translingual==
-[[Category:chemistry]]
-'''Y'''
-#(''chemistry'') Symbol for [[yttrium]].
-[[Category:Symbols]]
-----
-
-[[pl:Y]][[Category:Latin letters]]
-[[pt:Y]]
+#redirect [[y]]
