[[Yago]] moved to [[yago]]: Converting page titles to lowercase <Yago#170757>

--- a/wiki/yago.wikitext
+++ b/wiki/yago.wikitext
@@ -1,5 +1,1 @@
-==English==
-===Adjective===
-#Slang often used in a [[derogatory]] manner to mean [[stupid]] and/or [[homosexual]]. Generally used in conjuction with [[l33t]] speak. The term orginated on [[Internet Relay Chat|IRC]] and [[internet forums]] in reference to a user who would [[Internet troll|troll]] with offensive and homosexual content. Eventually the term became widespread at offline events such as [[LAN party|LAN parties]].
-===Proper noun===
-#A male name equivalent to [[Jack]].
+#redirect [[yago]]
