[[Yak]] moved to [[yak]]: Converting page titles to lowercase <Yak#170763>

--- a/wiki/yak.wikitext
+++ b/wiki/yak.wikitext
@@ -1,48 +1,1 @@
-{{wikipedia}}
-==English==
-[[Category:Mammals]]
-
-=== Noun ===
-'''yak'''
-{{wikipedia}}
-#An [[ox]]-like mammal native to the [[Himalayas]] and [[Tibet]] with dark, long and silky hair a horse like tail and a full bushy mane.
-
-====Scientific name====
-*[[Bos (mutus) grunniens]]- Wild yak
-*[[Poephagus grunniens]]- Domestic yak
-
-====Translations====
-*'''Dutch''': yak ''m''
-*'''Interlingua''': yak
-*'''Japanese''': [[ヤク]] (yaku)
-*'''Mongolian''': [[сарлаг]] (sarlag)
-*'''Polish''': [[jak]] ''m''
-*'''Spanish''': [[jak]]?
-*'''Slovenian''': [[jak]]
-*'''Swedish''': [[jak]]
-*'''Tibetan''': [[གཡག་]] (gyag)
-
-[[image:yak.jpg]]
-
-=== Verb ===
-'''to yak''' ('''yakking'''/'''[[yakked]]''')
-# To talk, particularly informally.
-# To vomit, usually as a result of consuming alcohol.
-#:Note: ''This is subject to the typically Australian '[[have-a-verb]]' syntactic construction, as in 'I had a yak last night'. But this does not qualify 'yak' to be nominal.''
-
-====Alternative spellings====
-*[[yack]]
-
-=== Noun ===
-'''yack''' ([[yakked]], yakked)
-# A talk, particular an informal one.
-
-====Alternative spellings====
-*[[yack]]
-
-===See Also===
-*[[yackety-yak]]
-
-
-[[nl:yak]]
-[[pl:Yak]]
+#redirect [[yak]]
