--- a/wiki/yank.wikitext
+++ b/wiki/yank.wikitext
@@ -1,75 +1,1 @@
-==English==
-===Pronunciation===
-*yăngk, /jæŋk/, /<tt>j{Nk</tt>/
-
-===Etymology===
-
-===Noun===
-'''yank''' (''plural'' '''yanks''')
-
-#A [[sudden]], [[vigorous]] [[pull]].
-
-====Synonyms====
-*(''sudden, vigorous pull''): [[jerk]], [[tug]]
-
-===Transitive verb===
-'''to yank''' ('''yanking''', '''yanked''', '''yanked''')
-
-#To pull something with a [[quick]], [[strong]] [[action]].
-#to [[remove]] from [[circulation]]
-#:''They yanked the product as soon as they learned it was unsafe.''
-
-====Synonyms====
-*(''pull''): [[jerk]], [[tug]]
-*(''remove from circulation''): [[pull]], [[recall]]
-
-===Etymology===
-Contraction of '''Yankee''',see [[Yankee#Etymology|Etymology of Yankee]]
-
-===Proper noun===
-'''Yank''' (''plural'' '''Yanks''')
-# In the USA, a resident or transient living, or who was born, above the [[:w:Mason Dixon line|Mason-Dixon line]]
-# In Great Britain, most of Europe, and Australia, anyone from the USA
-# ''(pejorative)'' Someone from the USA with bad manners while visiting Great Britain, most of Europe, or Australia
-
-====Synonyms====
-*(''native of New England''): [[New Englander]]
-*(''native of the USA''): [[American]]
-
-====Translations====
-
-'''native of New England'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
-|}
-|}
-
-'''native of the Northern USA'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
-|}
-|}
-
-'''native of the USA'''
-''See'' '''[[American]]'''
-*Spanish [[yanqui]]
-
-===External Links===
-[[:w:Mason Dixon line|Wikipedia article on Mason Dixon line]]<br>
-[[:w:Yankee|Wikipedia article on Yankees]]
+#redirect [[yank]]
