--- a/wiki/yard.wikitext
+++ b/wiki/yard.wikitext
@@ -1,52 +1,1 @@
-==English==
-=== Noun ===
-'''yard''' (''plural'' '''yards''')
-
-# The land surrounding a house and belong to the owner of the house.
-# (''Jamaican'') One's house or home.
-# (''Jamaican'') Jamaica (''used by Jamaicans when abroad'')
-
-==== Translations ====
-*French: (1): [[cour]] ''f''
-*Italian: (1): [[cortile]] ''m''
-*Swedish: [[gård]] (1), [[trädgård]] (1), [[tomt]] (1)
-
-====Related terms====
-*[[courtyard]]
-*[[farmyard]]
-*[[yardbird]]
-*[[Yardie]]
-
-===Noun===
-'''yard''' (''plural'' '''yards''')
-# A unit of length equal to three [[feet]] (exactly 0.9144 [[metre]]).
-
-==== Translations ====
-*French: (1): yard ''m''
-*Italian: (1): [[iarda]] ''f'', yard ''f''
-
-====Related terms====
-*[[yard of ale]]
-*[[yardarm]]
-*[[yardstick]]
-
-==French==
-===Noun===
-'''yard''' ''m'' (''plural'' '''yards''')
-
-#yard (''unit of length'')
-
-==Italian==
-===Noun===
-'''yard''' ''f'' (''plural'' '''yard''')
-
-#yard (''unit of length'')
-
-====Synonym====
-*[[iarda]]
-
-[[Category:English:Units of Measure]]
-
-[[fr:yard]]
-[[nl:yard]]
-[[pl:Yard]]
+#redirect [[yard]]
