--- a/wiki/yap.wikitext
+++ b/wiki/yap.wikitext
@@ -1,53 +1,1 @@
-==English==
-===Noun===
-'''yap''' (''plural'' '''yaps''')
-
-#The [[high-pitched]] [[bark]] of a small [[dog]].
-#An informal talk.
-
-====Translations====
-
-'''high-pitched bark'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-|}
-
-===Intransitive verb===
-'''to yap''' (yapping, yapped, yapped)
-
-#Of a small dog, to bark.
-#(''slang'') To talk, especially excessively.
-#:''You're always yapping - I wish you'd shut up.''
-
-====Translations====
-
-'''of a small dog, to bark in a non-growly manner'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-|}
-
-'''slang: to talk, especially excessively'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-|}
+#redirect [[yap]]
