--- a/wiki/ye.wikitext
+++ b/wiki/ye.wikitext
@@ -1,23 +1,1 @@
-==English==
-[[Category:English language]][[Category:Old English]]
-===Pronunciation===
-[[en:SAMPA/English|SAMPA]]: /'''ji:'''/
-
-===Etymology (1)===
-:from Anglo-Saxon ''ge'', the nominative case of the second person plural personal pronoun.  See also [[you]].[[Category:Indo-European root *yu-]]
-
-====[[Personal pronoun]]====
-#[''Archaic''] [[you]] (the people being addressed).
-#:Note: ''Ye'' was originally used only used for the nominative case (as the subject), and only for the second person plural. Later, ''ye'' was used as a subject or an object, either singular or plural, which is the way that ''you'' is used today.
-
-===Etymology (2)===
-:from the Middle English ''Þe''. Printers who couldn't reproduce the "''Þ''" (''thorn'') character (which corresponds to the modern "''th''" sound), substitued a "''y''".  Despite the use of 'y', it was still read "the".
-
-====Definite article====
-#[''archaic'']: [[the]].
-#:''Ye Olde Medicine Shoppe''.
-
-
-==Ido==
-===Preposition===
-# [[at]]
+#redirect [[ye]]
