[[Yay]] moved to [[yay]]: Converting page titles to lowercase <Yay#170814>

--- a/wiki/yay.wikitext
+++ b/wiki/yay.wikitext
@@ -1,23 +1,1 @@
-==English==
-===Pronunciation===
-*yā, /yeɪ/, /yeI/
-*:'''Homophones''': [[yea]]
-*:[[Rhymes:English:-eɪ|Rhymes: -eɪ]]
-
-===Interjection===
-'''yay'''
-
-# ''(colloquial)'' [[yes]]
-# An expression of happiness
-#: "Yay! I have finally finished my work." 
-
-====Alternate Spelling====
-*[[yea]]
-
-====Synonyms====
-*[[hooray]]
-
-===See also===
-*[[nay]]
-
-[[Category: English interjections]]
+#redirect [[yay]]
