[[Yeti]] moved to [[yeti]]: Converting page titles to lowercase <Yeti#170882>

--- a/wiki/yeti.wikitext
+++ b/wiki/yeti.wikitext
@@ -1,37 +1,1 @@
-==English==
-===Pronounciation===
-[[Hyphenation]]: ye&middot;ti
-
-===Etymology===
-From Tibetan
-
-===Noun===
-'''yeti''' (plural: ''yetis'')
-
-#An unidentified [[humanoid]] animal said to live in the [[Himalayas]].
-
-====Synonyms====
-*[[abominable snowman]]
-
-====Translations====
-
-'''unidentified animal'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*Dutch: yeti
-*French: [[yéti]] ''m''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*German: yeti ''m''
-*Swedish: yeti, [[jeti]]
-|}
-|}
-
-===See also===
-*[[bigfoot]]
-*[[sasquatch]]
-*[[yowie]]
+#redirect [[yeti]]
