--- a/wiki/yoga.wikitext
+++ b/wiki/yoga.wikitext
@@ -1,10 +1,1 @@
-==English==
-===Noun===
-{{wikipedia}}
-'''yoga'''
-#A [[Hindu]] [[discipline]] aimed at [[training]] the [[consciousness]] for a [[state]] of [[perfect]] [[spiritual]] [[insight]] and [[tranquillity]]; especially a [[system]] of [[exercise]]s practiced to [[promote]] [[control]] of the [[body]] and [[mind]]
-[[Category:Sanskrit derivations]]
-
-==== Translations ====
-*Chinese: [[瑜伽]] (yú jiā)
-*{{es}}: yoga
+#redirect [[yoga]]
