[[You-know-who]] moved to [[you-know-who]]: Converting page titles to lowercase <You-Know-Who#170991>

--- a/wiki/you-know-who.wikitext
+++ b/wiki/you-know-who.wikitext
@@ -1,37 +1,1 @@
-==English==
-===Pronoun===
-'''you-know-who''' (''singular and plural'')
-
-#(''singular'') A person or entity whose name one does not want to mention but that is known to the person to which one is speaking.
-#(''plural'') People whose names one does not want to mention but who are known to the person to which one is speaking.
-
-====Translations====
-*French: [[qui tu sais]], [[qui vous savez]] <!--are these hyphenated in French?-->
-*Swedish: 
-**[[du-vet-vem]] (talking to one person about one person)
-**[[ni-vet-vem]] (talking to multiple persons about one person)
-**[[du-vet-vilka]] (talking to one person about multiple persons), 
-**[[ni-vet-vilka]] (talking to multiple persons about multiple persons)  
-
-===Proper noun===
-'''You-Know-Who'''
-
-# In J.K. Rowling's series of books about Harry Potter, a name used to refer to [[Lord]] [[Voldemort]] by those who are afraid to pronounce his name.
-
-==== Translations ====
-*Chinese: [[神秘人]] (Shén-Mì-Rén) (''mainland''), [[那個人]] (Nà-Gè-Rén) (''Taiwan'')
-*Dutch: [[Jeweetwel]]
-*French: [[Vous-Savez-Qui]], [[Tu-Sais-Qui]]
-*German: [[Du-weißt-schon-wer]]
-*Hebrew: [[שאתה־יודע־מי]]
-*Italian: [[Lei-Sa-Chi]] / [[Tu-Sai-Chi]]
-*Japanese: [[例の]] (れいの, Rei-No)
-*Latin: [[Quidam]]
-*Portuguse: [[Quem N&oacute;s Sabemos]] (''Portugal''), [[Voc&ecirc;-sabe-quem]] (''Brazil'')
-*Slovak: [[Veď-Vieš-Kto]]
-*Spanish: [[Quien-tú-sabes]]
-*Swedish: [[du-vet-vem]]
-*Vietnamese: [[Kẻ-mà-ai-cũng-biết-là-ai-đấy]]
-
-
-[[Category:Harry Potter]]
+#redirect [[you-know-who]]
