--- a/wiki/you_can_lead_a_horse_to_water%2C_but_you_can%27t_make_it_drink.wikitext
+++ b/wiki/you_can_lead_a_horse_to_water%2C_but_you_can%27t_make_it_drink.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Idiom===
-{{cat|English idioms}}
+[[Category:English idioms]]
 #You can show someone how to do things, but you can't make them do it.
