[[Yucca]] moved to [[yucca]]: Converting page titles to lowercase <Yucca#171058>

--- a/wiki/yucca.wikitext
+++ b/wiki/yucca.wikitext
@@ -1,7 +1,1 @@
-==English==
-
-===Noun===
-
-'''yucca'''
-
-#A genus of liliaceous plants having long, pointed, and rigid leaves at the top of a woody stem, and bearing a large panicle of showy white blossoms.
+#redirect [[yucca]]
