--- a/wiki/z.wikitext
+++ b/wiki/z.wikitext
@@ -1,44 +1,1 @@
-== English ==
-
-===Other Forms===
-*With [[acute]]: [[ź]]
-*With dot above: [[ż]]
-*With [[caron]]: [[ž]]
-*With stroke: [[ƶ]]
-*With retroflex hook: [[ʐ]]
-*With curl: [[ʑ]]
-*With [[circumflex]]: [[ẑ]]
-*With dot below: [[ẓ]]
-*With line below: [[ẕ]]
-===See also===
-*[[ʒ]] ([[ezh]])
-*[[Ζ]] ([[zeta]])
-----
-
-===Pronunciation===
-[[IPA]]: UK /z&#603;d/, US /zi&#720;/
-
-===Noun===
-
-#The twenty-sixth and last letter of the [[Appendix:English alphabet|English alphabet]].  ''Sometimes spelt out as [[zed]] or [[zee]].  "Zed" is the older form.''
-#(Chemistry) Symbol for [[Atomic number]].
-----
-
-== Polish==
-=== Preposition ===
-'''z'''
-#[[with]]
-
-----
-
-== Slovak ==
-=== Preposition ===
-: '''z''' ''or'' '''zo'''
-: Followed by the [[genitive]] [[case]].
-: The standard form is '''z'''. The '''zo''' form is used when the following word starts with the letter ''z'' or ''s''.
-# [[from]]
-----
-{{msg:indexletters1}} '''[http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Z Z] '''-- [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Za Za] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zb Zb] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zc Zc] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zd Zd] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Ze Ze] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zf Zf] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zg Zg] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zh Zh] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zi Zi] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zj Zj] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zk Zk] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zl Zl] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zm Zm] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zn Zn] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zo Zo] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zp Zp] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zq Zq] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zr Zr] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zs Zs] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zt Zt] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zu Zu] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zv Zv] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zw Zw] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zx Zx] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zy Zy] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Zz Zz] <br>
-{{msg:indexletters2}}
-[[Category:Latin letters]]
-[[ja:z]][[pl:z]]
+#redirect [[z]]
