--- a/wiki/ZA.wikitext
+++ b/wiki/ZA.wikitext
@@ -1,7 +1,16 @@
-===Abbreviation===
+==English==
+===Noun===
+'''za''' (''plural'' '''zas''')
 
-#Internet code of South Africa
+#(''US slang'') [[Pizza]].
 
-==Spanish==
-===Abbreviation===
-#[[Zacatecas]] (Mexican state)
+<!--Put translations, etc, under "pizza", unless you are aware of languages that have slang terms for "pizza"-->
+
+===Verb===
+to [[sort]] a list of words or names [[alphabetically]] backwards from Z to A. Derived from the buttons used in many [[computer]] [[program]]s to sort [[data]].
+
+Antonym: [[az]]
+
+[[hr:za]]
+[[it:za]]
+[[pl:Za]]
