--- a/wiki/zahlen.wikitext
+++ b/wiki/zahlen.wikitext
@@ -1,14 +1,1 @@
-==German==
-===Noun===
-'''Zahlen'''
-# plural of [[Zahl]].
-
-===Verb===
-'''zahlen'''
-# to [[pay]] (for something).
-# to pay for, to [[atone]] for.
-
-====Phrases====
-* '''Kellner, zahlen bitte!''' - Waiter, the bill please!
-
-[[de:zahlen]]
+#redirect [[zahlen]]
