[[Zak]] moved to [[zak]]: Converting page titles to lowercase <Zak#171152>

--- a/wiki/zak.wikitext
+++ b/wiki/zak.wikitext
@@ -1,16 +1,1 @@
-==English==
-===Noun===
-'''zak'''
-
-#''Slang'', '''money''', in South Africa (in Australia it is spelled ''' ''Zac'' ''' meaning a "small amount of money")
-
-----
-
-==Dutch==
-===Noun===
-'''zak''' ''m''
-
-#[[bag]], [[sack]], [[pocket]]
-#''(slang):'' contraction of [[klootzak]]: [[asshole]]
-
-[[nl:zak]]
+#redirect [[zak]]
