--- a/wiki/zar.wikitext
+++ b/wiki/zar.wikitext
@@ -1,6 +1,1 @@
-== Spanish ==
-=== Noun ===
-'''zar''' ''m'' '''zarina''' ''f''
-# [[czar]], [[czarina]]
-
-[[Category:Spanish nouns]]
+#redirect [[zar]]
