[[Zattere]] moved to [[zattere]]: Converting page titles to lowercase <Zattere#171214>

--- a/wiki/zattere.wikitext
+++ b/wiki/zattere.wikitext
@@ -1,16 +1,1 @@
-==Italian==
-===Noun===
-'''zattere''' ''f plural''
-
-#Plural of '''[[zattera]]'''.
-
-===Etymology===
-Plural of '''[[zattera]]'''; [[literally]], the [[raft]]s or [[pontoon]]s.
-
-===Proper noun===
-'''le Zattere''' ''f plural''
-
-====Alternative form====
-'''la [[Fondamenta delle Zattere]]'''
-
-#One of the lagoon [[side-street]]s in Venice.
+#redirect [[zattere]]
