[[Zenit]] moved to [[zenit]]: Converting page titles to lowercase <Zenit#171276>

--- a/wiki/zenit.wikitext
+++ b/wiki/zenit.wikitext
@@ -1,15 +1,1 @@
-==German==
-===Noun===
-'''Zenit''' ''m''
-
-# [[zenith]]
-
-==Italian==
-===Pronuciation===
-*/<font style="font-family:lucida sans unicode">'dz&#603;nit</font>/
-===Noun===
-'''zenit''' ''m''
-
-# [[zenith]]
-
-[[pl:Zenit]]
+#redirect [[zenit]]
