[[Zebu]] moved to [[zebu]]: Converting page titles to lowercase <Zebu#171247>

--- a/wiki/zebu.wikitext
+++ b/wiki/zebu.wikitext
@@ -1,25 +1,1 @@
-==English==
-===Pronunciation===
-*[[IPA]]: /ˈzɛbu/, /ˈzɛbju/<!--do not add a length mark to the u is it is final and unstressed-->
-*[[SAMPA]]: /"zEbu/, /"zEbju/<!--do not add a length mark to the u is it is final and unstressed-->
-
-===Noun===
-'''zebu''' (''plural'' '''zebus''')
-
-# A [[domesticated]] [[ox]] native to Asia and Africa, having a large [[fleshy]] [[hump]] on its back and a [[dewlap]].
-
-==== Translations ====
-*French: [[zébu]] ''m''
-*German: Zebu ''n'', [[Buckelrind]] ''n''
-*Italian: [[zebù]] ''m''
-*Spanish: [[cebú]] ''m''
-
-----
-==German==
-===Noun===
-'''Zebu''' ''m''
-
-#zebu
-
-====Synonyms====
-*[[Buckelrind]]
+#redirect [[zebu]]
