[[Zelkova]] moved to [[zelkova]]: Converting page titles to lowercase <Zelkova#171266>

--- a/wiki/zelkova.wikitext
+++ b/wiki/zelkova.wikitext
@@ -1,59 +1,1 @@
-==English==
-===Etymology===
-1893 From New Latin (genus name) from Russian [[дзельква]] (dzel'kva) from a [[Caucasian]] language, possibly Georgian [[ძელქვა]] (tselkva)<!-- neither OED nor Kenkusha narrow it down further than Cauc. -->
-
-===Noun===
-'''zelkova''' ([[zelkovas]])
-
-# A genus of trees in the [[elm]] family.
-{{seeCites}}
-
-====Alternative spellings====
-*Zelkova<!-- OED supplement; capitalization variant is propably more a matter of inconsistent views on the treatment of biological names in English -->
-<!-- "zelcova" is also frequently seen, "zelkoua" occasionally -->
-
-====Synonyms====
-*[[Caucasian elm]]
-*[[Japanese elm]]<!-- seems to also refer to Ulmus japonica -->
-*[[keaki]]<!-- Illus. Encyc. of Trees, 1978-->, [[keyaki]], [[kiaki]]<!-- both OED supplement -->
-
-====Derived terms====
-*[[Caucasian zelkova]]
-*[[Chinese zelkova]]
-*[[Cretan zelkova]]
-*[[cut-leafed zelkova]]
-*[[Japanese zelkova]]
-*[[saw-leaf zelkova]]
-*[[Schneider's Zelkova]]
-
-====Translations====
-{{top}}
-*CJKV Characters: [[槻]]<!-- ja tsuki, looks like simp. of foll. -->; [[欟]]<!-- ja tsuki, looks like trad. of prev. -->; [[欅]]<!-- ja keyaki, looks like var of chin. -->; [[櫸]]<!-- chin. trad. -->, [[榉]]<!-- chin. simp. --> 
-*Czech: zelkova, [[zelkova habrolistá]]
-*Danish: zelkova
-*Estonian: [[tselkva]]
-*French: [[orme de Sibérie]], [[planere]], [[zelcova]] ''m''
-*Georgian: [[ძელქვა]] (tselkva)
-*German: [[Zelkove]], [[Zelkowe]], [[Zelkoua]], [[Zelkowa]]<!-- not sure which are considered correct but all are found -->
-{{mid}}
-*Italian: [[olmo siberiano]], [[azad]], [[zelcova]] ''f''
-*Japanese: [[ケヤキ]] ([[欅]], keyaki)
-*Korean: [[느티나무]] (neutinamu)
-*Portuguese: [[olmo cinzento]] ''m'', zelkova ''f''
-*Russian: [[дзельква]] (dzél’kva) ''f''
-*Spanish: [[olmo chino]] ''m'', zelkova ''f''
-{{bottom}}
-
-===See also===
-*[[elm]]
-*[[w:Zelkova|Wikipedia article on the zelkova]]
-
-----
-
-==Latin==
-===Etymology===
-Applied in 1841 by Spach in ''Annales des sciences naturelles - botanique'', from Russian.
-===Noun===
-#''[[nomen conservandum]]'' for a genus of plants in the family Ulmaceae.
-===Synonym===
-*''[[Abelicea]]'' Baillon 1875
+#redirect [[zelkova]]
