--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -1,10 +1,1 @@
-==English==
-===Etymology===
-Japanese [[禅]]
-
-===Noun===
-'''Zen'''
-
-# a denomination of [[Buddhism]]
-
-[[fr:zen]]
+#redirect [[zen]]
