[[Zephyr]] moved to [[zephyr]]: Converting page titles to lowercase <Zephyr#171283>

--- a/wiki/zephyr.wikitext
+++ b/wiki/zephyr.wikitext
@@ -1,17 +1,1 @@
-==English==
-===Etymology===
-From the Greek ''Zephyrus'', (the West Wind)
-
-===Noun===
-'''zephyr'''
-# a light [[refreshing]] [[wind]]; a [[gentle]] [[breeze]]
-# any thing of fine, [[soft]], or light quality, especially [[fabric]]
-
-==Proper noun===
-'''Zephyr'''
-{{wikipedia}}
-# ''(Greek mythology)'' The [[god]] of the West Wind
-# a [[motor car]] made (some time ago) by Ford in the [[United Kingdom]]
-# a small [[town]] in [[Texas]]
-
-[[Category:Greek derivations]]
+#redirect [[zephyr]]
