[[Zia]] moved to [[zia]]: Converting page titles to lowercase <Zia#171344>

--- a/wiki/zia.wikitext
+++ b/wiki/zia.wikitext
@@ -1,13 +1,1 @@
-==Italian==
-===Etymology===
-Greek ''[[θεία]]''
-===Noun===
-'''zia''' ''f'' (''plural'' '''zie''')
-
-#[[aunt]]
-
-====See also====
-*[[zio]]
-*[[zii]]
-
-[[it:zia]]
+#redirect [[zia]]
