[[Zither]] moved to [[zither]]: Converting page titles to lowercase <Zither#171428>

--- a/wiki/zither.wikitext
+++ b/wiki/zither.wikitext
@@ -1,29 +1,1 @@
-==English==
-===Etymology===
-From the Latin ''cithara'', from the Greek ''kithara''
-
-===Noun===
-'''zither'''
-{{wikipedia}}
-# a [[musical instrument]] consisting of a flat sounding box with numerous strings, placed on a horizontal surface, and played with a [[plectrum]] and fingertips; similar to a [[dulcimer]].
-
-====Translations====
-*Chinese: [[古箏]], [[古筝]]
-*French: [[cithare]] ''f''
-*German: Zither ''m''
-*Hebrew: [[ציתר]] ''m''
-*Russian: [[цитра]] ''f'' (tsitra)
-*Slovensko: [[citre]] ''f, pl''
-*Spanish: [[cítara]] ''f''
-
-
-===See also===
-*[[dulcimer]]
-
-----
-
-==German==
-===Noun===
-'''Zither''' ''m''
-
-# zither
+#redirect [[zither]]
