--- a/wiki/zombie.wikitext
+++ b/wiki/zombie.wikitext
@@ -1,84 +1,1 @@
-==English==
-<!--
-====Etymology====
-From Zumbi, the slave leader?
--->
-====Hyphenation====
-:zom&middot;bie
-{{wikipedia}}
-===Noun===
-'''zombie''' (''plural'' [[zombies]])
-
-# a [[snake]] [[god]] in [[voodoo]] of [[Haiti]] and elsewhere
-# (''Fiction'') A person that is [[undead]].
-# A person that was said to die and come back to life.
-# A person that is [[apathetic]].
-# An information worker who has signed a non-disclosure clause, in return for employment.
-# (''computers'') a [[process]] or [[task]] which has [[terminated]] but was not removed from the list of processes, typically because it has child processes that have not yet terminated.
-# a [[drink]] of [[rum]] and [[fruit]] [[juice]]s
-
-====Synonyms====
-*(2) [[vampire]], [[living dead]]
-*(4) [[lifeless]], [[soulless]]
-*(5) [[intellectual prostitute]]
-*(6) [[defunct]] 
-
-====Translations====
-'''the undead'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*Lithuanian: [[zombis]] ''m''
-|}
-|}
-
-'''someone who died and came back'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-|}
-
-'''person that is apathetic'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-|}
-
-'''information worker who signed non-disclosure clause, in return for employment'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-|}
-
-=== Sources ===
-* August 2, 2004, [http://www.eet.com/issue/fp/showArticle.jhtml?articleId=26100928 "EE Times: Beware 'zombie' clauses]
+#redirect [[zombie]]
