[[Zone]] moved to [[zone]]: Converting page titles to lowercase <Zone#171467>

--- a/wiki/zone.wikitext
+++ b/wiki/zone.wikitext
@@ -1,41 +1,1 @@
-==English==
-===Etymology===
-Greek [[ζώνη]] (''z&#333;n&#275;''), '[[girdle]]'.
-
-===Pronunciation===
-*zōn, /zəʊn/, /<tt>z@Un</tt>/
-
-===Noun===
-'''zone''' ([[zones]])
-
-# An area distinguished on the basis of a particular characteristic, use, restriction, etc.
-
-====Synonyms====
-*[[area]]
-*[[belt]]
-*[[region]]
-*[[section]]
-*[[sector]]
-*[[sphere]]
-*[[territory]]
-
-===Verb===
-'''to zone'''  ([[zoned]], [[zoning]])
-# Divide into or assign zones.
-# to enter a [[daydream]] state (often, but not necessarily, induced by ilicit chemical intake)
-
-====Derived terms====
-*[[time zone]]
-*[[zonal]] (adjective)
-*[[zoning laws]]
-
-
-==French==
-===Noun===
-'''zone'''
-
-[[Category:Greek derivations]]
-
-[[et:Zone]]
-[[fr:zone]]
-[[pl:Zone]]
+#redirect [[zone]]
