--- a/wiki/zo.wikitext
+++ b/wiki/zo.wikitext
@@ -1,19 +1,1 @@
-==English==
-===Noun===
-'''zo'''
-
-#An alternative spelling of '''[[dzo]]'''.
-
-<!--Put translations, etc, under "dzo"-->
-----
-==Slovak==
-===Preposition===
-:'''z''' ''or'' '''zo'''
-# [[from]]
-
-====Usage notes====
-*Followed by the [[genitive]] [[case]].
-*The standard form is '''[[z#Slovak|z]]'''. The [[zo]] form is used before words starting with the letters '''z''' or '''s'''.
-
-[[it:zo]]
-[[nl:zo]]
+#redirect [[zo]]
