--- a/wiki/zon.wikitext
+++ b/wiki/zon.wikitext
@@ -1,9 +1,1 @@
-==Dutch==
-===Noun===
-'''zon''' ''f'' (plural: [[zonnen]], diminutive: [[zonnetje]])
-
-# [[sun]]
-
-[[de:zon]]
-[[nl:zon]]
-[[pl:Zon]]
+#redirect [[zon]]
