--- a/wiki/zoom.wikitext
+++ b/wiki/zoom.wikitext
@@ -1,54 +1,1 @@
-==English==
-===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /zu:m/
-
-===Noun===
-'''zoom'''
-
-# a humming noise from something moving very fast
-# a quick ascent
-# a big increase
-# an augmentation of a view as with a lens
-
-====Translations====
-*[[Bulgarian]]: [[бръмчене]] ''n'' (1), [[рязък|рязко]] [[изкачване]] ''n'' (2), [[увеличение]] ''n'' (3)
-*[[Dutch]]: [[zoem]] ''m'' (1), [[zoom]] (4)
-*[[German]]:[[Vergrößerung]] ''f'' (4)
-*[[Interlingua]]: [[susurro]] (1); [[zoom]] (4)
-*[[Portuguese]]: [[zumbido]] (1); [[zoom]] (4)
-*[[Spanish]]: [[zumbido]] (1); [[zoom]] (4)
-
-===Verb===
-'''to zoom''' (zoomed, zoomed)
-
-# to move fast with a humming noise
-# to fly an airplane straight up
-# to move rapidly
-# to go up sharply, as in ''prices zoomed''
-# to bring a camera into focus with a '''[[zoom lens]]'''
-
-==== Translations ==== 
-*[[Bulgarian]]: [[бръмча]] (1), [[издигам]] (2), [[покачвам]] (3)
-*[[Dutch]]: [[zoeven]] (1), [[zoemen]] (4)
-*[[German]]: [[vergrößern]] (4)
-*[[Interlingua]]: [[mover]] [[se]] [[rapide]]mente (1); [[focalisar]] [[con]] [[zoom]] (4) 
-*[[Portuguese]]: [[zumbir]] (1); [[enfocar]] [[com]] [[zoom]] (4)
-*[[Spanish]]: [[zumbar]] (1); [[enfocar]] [[con]] [[zoom]] (4)
-
-----
-==Dutch==
-===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /zo:m/
-
-===Noun===
-'''zoom''' ''m''
-
-plural: [[zomen]]
-
-#border of a cloth that is turned around and stitched
-
-===Translations===
-*Bulgarian: [[подгъв]] ''m''
-*English: [[hem]]
+#redirect [[zoom]]
