[[Zs]] moved to [[zs]]: Converting page titles to lowercase <Zs#171534>

--- a/wiki/zs.wikitext
+++ b/wiki/zs.wikitext
@@ -1,10 +1,1 @@
-==English==
-
-===Plural noun===
-
-# ''Slang'', '''sleep''', in U.S.
-#:''It's getting late, it's time to catch some Zs''.
-
-====Translations====
-
-*Bulgarian: [[сън]] ''m''
+#redirect [[zs]]
