[[Zu]] moved to [[zu]]: Converting page titles to lowercase <Zu#171535>

--- a/wiki/zu.wikitext
+++ b/wiki/zu.wikitext
@@ -1,24 +1,1 @@
-==German==
-===Preposition===
-'''zu'''
-# [[to]], [[towards]].
-# along with.
-# [[at]], [[by]], [[on]].
-# [[for]], in order to.
-
-===Particle===
-'''zu'''
-# Used with infinitive of verbs.
-
-===Adverb===
-'''zu'''
-# [[to]], [[towards]].
-# [[closed]], [[shut]].
-
-=== Derived Words ===
-* [[zum]] (zu + [[dem]])
-* [[zur]] (zu + [[der#German|der]])
-[[Category:German prepositions]]
-
-[[fi:Zu]]
-[[sv:zu]]
+#redirect [[zu]]
