[[Zucchini]] moved to [[zucchini]]: Converting page titles to lowercase <Zucchini#171550>

--- a/wiki/zucchini.wikitext
+++ b/wiki/zucchini.wikitext
@@ -1,28 +1,1 @@
-<!-- If you edit this page, please edit "courgette" accordingly. -->
-
-==English==
-===Etymology===
-From Italian ''zucchini'', plural of ''[[zucchino]]'', zucchini.
-
-===Noun===
-'''zucchini''' (''plural'' '''zucchini''' ''or'' '''zucchinis''')
-
-#(''US'', ''Aus'') A small [[marrow]].
-
-====Synonym====
-*[[courgette]] (''British'')
-
-====Translations====
-*French: courgette ''f''
-*Italian: [[zucchina]] ''f'', [[zucchino]] ''m''
-
-<!-- If you edit this page, please edit "courgette" accordingly. -->
-
-----
-==Italian==
-===Noun===
-'''zucchini'''
-
-#Plural of [[zucchino]].
-
-[[de:Zucchini]]
+#redirect [[zucchini]]
