[[Zwieback]] moved to [[zwieback]]: Converting page titles to lowercase <Zwieback#171603>

--- a/wiki/zwieback.wikitext
+++ b/wiki/zwieback.wikitext
@@ -1,11 +1,1 @@
-==English==
-===Noun===
-'''zwieback'''
-
-#a usually sweetened [[bread]] [[enriched]] with eggs that is [[baked]] and then [[sliced]] and toasted until [[dry]] and [[crisp]]
-#a [[teething]] [[food]] for [[toddler]] children
-
-====External Links====
-*[http://www.gerber.com/ Gerber]
-
-[[it:Zwieback]]
+#redirect [[zwieback]]
