[[Zwei]] moved to [[zwei]]: Converting page titles to lowercase <Zwei#171600>

--- a/wiki/zwei.wikitext
+++ b/wiki/zwei.wikitext
@@ -1,11 +1,1 @@
-==German==
-===Number===
-'''zwei'''
-# [[two]]
-
-[[de:zwei]]
-[[fr:zwei]]
-[[gl:Zwei]]
-[[it:zwei]]
-[[pt:Zwei]]
-[[sv:zwei]]
+#redirect [[zwei]]
