[[Zuviel]] moved to [[zuviel]]: Converting page titles to lowercase <Zuviel#171594>

--- a/wiki/zuviel.wikitext
+++ b/wiki/zuviel.wikitext
@@ -1,12 +1,1 @@
-==German==
-===Adverb===
-'''zuviel'''
-# [[too much]].
-
-====Phrases====
-* '''mehr als zuviel''' - more than enough
-* '''zuviel des Guten''' - too much of a good thing
-
-===Noun===
-'''Zuviel''' ''n''
-# [[excess]].
+#redirect [[zuviel]]
