[[Zygote]] moved to [[zygote]]: Converting page titles to lowercase <Zygote#171615>

--- a/wiki/zygote.wikitext
+++ b/wiki/zygote.wikitext
@@ -1,11 +1,1 @@
-=={{en}}==
-[[Category:English nouns]]
-===Noun===
-'''zygote''' (''Plural:'' [[zygotes]])
-
-#a [[fertilize|fertilized]] [[egg cell]]
-===Derived Terms===
-*[[zygotic]]
-===See also===
-*[[w:zygote|Wikipedia article on zygotes]]
-[[Category:Greek derivations]]
+#redirect [[zygote]]
