[[Zwölf]] moved to [[zwölf]]: Converting page titles to lowercase <Zwölf#171607>

--- a/wiki/zw%C3%B6lf.wikitext
+++ b/wiki/zw%C3%B6lf.wikitext
@@ -1,16 +1,1 @@
-==German==
-===Number===
-
-'''zwölf'''
-# [[twelve]].
-
-*Previous: [[elf]]
-*Next: [[dreizehn]]
-
-===Noun===
-'''Zwölf''' ''f''
-# a [[dozen]].
-[[Category:German cardinal number|1]]
-
-[[de:zwölf]]
-[[pt:Zwölf]]
+#redirect [[zwölf]]
