--- a/wiki/GNU.wikitext
+++ b/wiki/GNU.wikitext
@@ -1,1 +1,10 @@
-#redirect [[gnu]]
+===Acronym===
+'''GNU'''
+
+#A [[recursive acronym]] for [[w:GNU|GNU]]'s Not Unix.
+#Name of the [[w:Free Software Foundation|Free Software Foundation's]] project to develop a free [[UNIX]]-like [[operating system]], including the legal framework, such as the [[source code]] and [[documentation]] licenses.
+
+===See also===
+[[gnu]]
+
+[[ro:GNU]]
