--- a/wiki/fucker.wikitext
+++ b/wiki/fucker.wikitext
@@ -4,4 +4,6 @@
 #: ''You fucker, you wrecked my car!''
 # (vulgar) The object of some effort. See also [[puppy]], [[bad boy]].
 #: ''Let's see if we can fix this fucker''
+# (vulgar slang) People, friends, especially of very high solidarity.
+#: ''What's up, fuckers?!''
 # (very rare) one who [[fuck]]s
